--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,10 @@
-# server {
-#     listen 80;
-#     server_name localhost;
-
-#     location / {
-#         # Directory with React static files.
-#         root /usr/share/nginx/html;
-#         try_files $uri /index.html;
-#     }
-
-#     location /api {
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-NginX-Proxy true;
-#         proxy_pass http://django:8000/api;
-#         proxy_ssl_session_reuse off;
-#         proxy_set_header Host $http_host;
-#         proxy_cache_bypass $http_upgrade;
-#         proxy_redirect off;
-#     }
-# }
-
 server {
     listen 80;
-    # listen [::]:80;
-    server_name worldpeace.cloud www.worldpeace.cloud;
+    server_name worldpeace.cloud;
 
     location ~ /.well-known/acme-challenge {
-      allow all;
-      root /var/www/html;
+        allow all;
+        root /usr/share/nginx/html;
     }
 
     location / {
@@ -37,8 +14,7 @@ server {
 
 server {
     listen 443 ssl http2;
-    # listen [::]:443 ssl http2;
-    server_name worldpeace.cloud www.worldpeace.cloud;
+    server_name worldpeace.cloud;
 
     server_tokens off;
 
@@ -62,23 +38,7 @@ server {
     resolver 8.8.8.8;
 
     location / {
-        # Directory with React static files.
         root /usr/share/nginx/html;
         try_files $uri /index.html;
-        # try_files $uri @nodejs;
     }
-
-    #location @nodejs {
-    #    proxy_pass http://nodejs:8080;
-    #    add_header X-Frame-Options "SAMEORIGIN" always;
-    #    add_header X-XSS-Protection "1; mode=block" always;
-    #    add_header X-Content-Type-Options "nosniff" always;
-    #    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    #    add_header Content-Security-Policy "default-src * data: 'unsafe-eval' 'unsafe-inline'" always;
-    #    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    #    # enable strict transport security only if you understand the implications
-    #}
-
-    # root /var/www/html;
-    # index index.html index.htm index.nginx-debian.html;
 }
