--- a/nginx.conf
+++ b/nginx.conf
@@ -2,43 +2,45 @@ server {
     listen 80;
     server_name worldpeace.cloud;
 
-    location ~ /.well-known/acme-challenge {
-        allow all;
-        root /usr/share/nginx/html;
-    }
+    # location ~ /.well-known/acme-challenge {
+    #     allow all;
+    #     root /usr/share/nginx/html;
+    # }
 
     location / {
-        rewrite ^ https://$host$request_uri? permanent;
-    }
-}
-
-server {
-    listen 443 ssl http2;
-    server_name worldpeace.cloud;
-
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/worldpeace.cloud/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/worldpeace.cloud/privkey.pem;
-
-    ssl_buffer_size 8k;
-
-    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
-
-    ssl_protocols TLSv1.2;
-    ssl_prefer_server_ciphers on;
-
-    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-
-    ssl_ecdh_curve secp384r1;
-    ssl_session_tickets off;
-
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8;
-
-    location / {
+        # rewrite ^ https://$host$request_uri? permanent;
         root /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 }
+
+# server {
+#     listen 443 ssl http2;
+#     server_name worldpeace.cloud;
+
+#     server_tokens off;
+
+#     ssl_certificate /etc/letsencrypt/live/worldpeace.cloud/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/worldpeace.cloud/privkey.pem;
+
+#     ssl_buffer_size 8k;
+
+#     ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+
+#     ssl_protocols TLSv1.2;
+#     ssl_prefer_server_ciphers on;
+
+#     ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+#     ssl_ecdh_curve secp384r1;
+#     ssl_session_tickets off;
+
+#     ssl_stapling on;
+#     ssl_stapling_verify on;
+#     resolver 8.8.8.8;
+
+#     location / {
+#         root /usr/share/nginx/html;
+#         try_files $uri /index.html;
+#     }
+# }
