--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         image: nginx:1.23.3
         volumes:
             - web-root:/usr/share/nginx/html
-            - ./nginx.conf:/etc/nginx/nginx.conf:ro
+              # - ./nginx.conf:/etc/nginx/nginx.conf:ro
         ports:
             - "80:80"
             - "443:443"
